Agregar un par de archivos

--- a/Prueba.html
+++ b/Prueba.html
@@ -3,11 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mis mejores actores</title>
+    <style></style>
 </head>
 <body>
 
-    <h1>Hola mundogit</h1>
+    <h1 id="Lista">Nuestros actores favoritos</h1>
+
+    <!--ul>
+        <li>Tom Cruise</li>
+        <li>Harrison Ford</li>
+        <li>Paco Martínez Soria</li>
+    </ul-->
+
+    <ul>
+        <li><a href="#Tom">Tom Cruise</a></li>
+        <li><a href="#Harry">Harrison Ford</a></li>
+        <li><a href="#Paco">Paco Martínez Soria</a></li>
+    </ul>
+
+
+    <h2 id="Tom">Tom Cruise</h2>
+    <a href="#Lista">Volver a "Lista"</a>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+
+    <h2 id="Harry">Harrison Ford</h2>
+    <a href="#Lista">Volver a "Lista"</a>
+
+    <img src="carro.jpg" title="El halcón milenario" alt="Foto de Han Solo en el Halcón Milenario">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+
+    <h2 id="Paco">Paco Martínez Soria</h2>
+    <a href="#Lista">Volver a "Lista"</a>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus dolor, dolores optio suscipit ipsa nulla ipsum doloribus mollitia voluptate doloremque illo non, quo architecto odio nisi repellendus. Alias, repellendus facilis!</p>
     
 </body>
 </html>
+
+
