--- a/Grupo DGT/javi.html
+++ b/Grupo DGT/javi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title> Actores </title>
-    <link rel="stylesheet" href="Estilos.css" type="text/css">
+    <link rel="stylesheet" href="javi.css" type="text/css">
 </head>
 <body>
     <h1>
@@ -35,8 +35,9 @@
         Filmografía
     </h3>
    
-      <table>
-        <tr>
+    <!--table class="container"-->
+        <table>
+            <tr>
              <th>
                  Película
         </th>
