--- a/Grupo DGT/Prueba.html
+++ b/Grupo DGT/Prueba.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
     
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Actores </title>
     <link rel="stylesheet" href="Estilos.css" type="text/css">
 </head>
