--- a/Grupo DGT/Prueba.html
+++ b/Grupo DGT/Prueba.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Actores </title>
-    <link rel="stylesheet" href="Estilos.css" type="text/css">
+    <link rel="stylesheet" href="javi.css" type="text/css">
+    <!--link rel="stylesheet" href="Estilos.css" type="text/css"-->
 </head>
 <body>
     <h1>
