Esto es lo que Javi hizo al comienzo

--- a/Roberto y Raul/PELIS-IMBD.html
+++ b/Roberto y Raul/PELIS-IMBD.html
@@ -22,7 +22,7 @@ font-family:helvetica;
             
                            <tr>
                 <th colspan="2">Película</th>
-                <th>Año</th>
+                <th>YEAR</th>
                 <th>Director</th>
                 <th>Duración</th>
                 <th>Categoría</th>
