--- a/WEB-COMIDA/derecha.html
+++ b/WEB-COMIDA/derecha.html
@@ -105,9 +105,9 @@
     
     Monta la causa: capa gruesa de puré de patata, aguacate, puré de patata, pollo con mayonesa, puré de patata. Finaliza con los cherrys, la picada de aceitunas de botija, cilantro fresco, un poco de pasta de ajíes amarillos, dos mitades de lima y chiles frescos. 
     <br><br>
-    <a href="#ANTICUCHOS"></a>
+    <a href="#ANTICUTXOS"></a>
     <img src="../WEB-COMIDA/recipes/anticuchos.jpg" alt="No aparece anticuchos" width="50%">
-    <h2>ANTICUCHOS</h2>
+    <h2>ANTICUTXOS</h2>
     <a href="#Principio"></a>
      Ingredientes de los anticuchos peruanos
      <br>
