--- a/Futbol CJ/pagina web/Video.html
+++ b/Futbol CJ/pagina web/Video.html
@@ -6,9 +6,9 @@
     <title>Real Racing Club de Santander</title>
 	<link rel="icon" href="https://i.imgur.com/qkiiv0u.png" type="image/png">
 	<link rel="icon" href="https://i.imgur.com/qkiiv0u.png" type="image/png">
-
+    <link href="../style video.css"rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
+    <!--style>
         body {
             background-color: #000;
             color: white;
@@ -274,7 +274,7 @@
         .footer-section a:hover {
             color: #ffffff;
         }
-    </style>
+    </style-->
 </head>
 <body>
 
@@ -360,3 +360,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
