--- a/Futbol CJ/pagina web/index.html
+++ b/Futbol CJ/pagina web/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="../htdocs/Pre-Loader-main/style.css">
 <link href=".././pagina web/style index.css"rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!--style>
+    <style>
         body {
             background-color: #ffffff;
             color: #000000;
@@ -259,7 +259,7 @@
         .footer-section a:hover {
             color: #ffffff;
         }
-    </style-->
+    </style>
 </head>
 <body>
 
