--- a/Futbol CJ/pagina web/entradas.html
+++ b/Futbol CJ/pagina web/entradas.html
@@ -319,6 +319,13 @@
                         <a class="nav-link" href="Video.html">Video</a>
                     </li>
                 </ul>
+                    <!-- Agregar contenedor de logos en la parte superior derecha -->
+<div class="logos-container">
+    <a href="https://www.tiktok.com/@realracingclub?lang=es" target="_blank">
+    <img src="./img/Logo 1.png" width="40px" alt="Logo 1" class="logo"></a>
+    <a href="https://www.instagram.com/realracingclub/?hl=es" target="_blank">
+    <img src="./img/Logo2.webp" width="60px" alt="Logo 2" class="logo"></a>
+</div>
             </div>
         </div>
     </nav>
