Actualización de ficheros WEB + DERECHA [.HTML]

--- a/WEB-COMIDA/derecha.html
+++ b/WEB-COMIDA/derecha.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> </head>
 <body>
     <a href="#LOMO_SALTADO"></a>
-    <img src="../WEB-COMIDA/recipes/lomo saltado.jpg" alt="No aparece Lomo Saltado" width="50%">
+    <img src="/recipes/lomo saltado.jpg" alt="No aparece Lomo Saltado" width="50%">
     <h2>LOMO SALTADO</h2>
     <a href="#Principio"></a>
         INGREDIENTES (Para 3 porciones):
@@ -30,7 +30,7 @@
             • Caldo o fondo de carne de res al gusto
             • Sal al gusto
             • Aceite vegetal    
-           <BR>  <BR>       
+           <BR><BR>       
             PREPARACIÓN
             
             4 porciones
@@ -48,7 +48,7 @@
             Servir caliente con las papas fritas. Acompañar con una porción de arroz blanco.
 
             <A href="#CAUSA_RELLENA"></A>
-      <img src="../WEB-COMIDA/recipes/causa rellena.jpg" alt="No aparece causa rellena" width="50%">
+      <img src="/recipes/causa rellena.jpg" alt="No aparece causa rellena" width="50%">
     <h2>CAUSA RELLENA</h2>
     <a href="#Principio"></a>
     INGREDIENTES
@@ -105,8 +105,8 @@
     
     Monta la causa: capa gruesa de puré de patata, aguacate, puré de patata, pollo con mayonesa, puré de patata. Finaliza con los cherrys, la picada de aceitunas de botija, cilantro fresco, un poco de pasta de ajíes amarillos, dos mitades de lima y chiles frescos. 
     <br><br>
-    <a href="#ANTICUTXOS"></a>
-    <img src="../WEB-COMIDA/recipes/anticuchos.jpg" alt="No aparece anticuchos" width="50%">
+    <a href="#ANTICUCHOS"></a>
+    <img src="/recipes/anticuchos.jpg" alt="No aparece anticuchos" width="50%">
     <h2>ANTICUTXOS</h2>
     <a href="#Principio"></a>
      Ingredientes de los anticuchos peruanos
@@ -153,7 +153,7 @@
     Servimos los anticuchos con las patatas y la salsa criolla
     <br><br>
         <a href="#PACHAMANCA_A_LA_TIERRA"></a>
-        <img src="../WEB-COMIDA/recipes/pachamanca.jpg" alt="No aparece pachamanca" width="50%">
+        <img src="/recipes/pachamanca.jpg" alt="No aparece pachamanca" width="50%">
         <h2>PACHAMANCA A LA TIERRA</h2>
         <a href="#Principio"></a>
     <BR><BR>
@@ -215,7 +215,7 @@ No hay nada mejor que probar un trozo de papas o carne recién salida del horno,
 Puedes acompañar con ensaladas, salsas, vinagretas, vino y Cerveza. Recomendamos tomar té caliente después de las comidas para ayudar con la digestión.
     <br><br>
         <a href="#CHICHARRON_DE_CERDO"></a>
-        <img src="../WEB-COMIDA/recipes/chicharron.jpg" alt="No aparece chicharron de cerdo" width="50%">
+        <img src="/recipes/chicharron.jpg" alt="No aparece chicharron de cerdo" width="50%">
         <h2>CHICHARRON DE CERDO</h2>
         <a href="#Principio"></a>
     <BR><BR>
@@ -250,7 +250,7 @@ PREPARACIÓN
 - Sirve y acompaña con papas o yucas doradas, sarsa criolla, cancha, arroz y camote frito.
 <br><br>
     <a href="#OLLUQUITO_CON_CHARQUI"></a>
-    <img src="../WEB-COMIDA/recipes/olluquito con charqui.jpg" alt="No aparece olluquito con charqui width="50%">
+    <img src="/recipes/olluquito con charqui.jpg" alt="No aparece olluquito con charqui width="50%">
     <h2>OLLUQUITO CON CHARQUI</h2>
     <a href="#Principio"></a>
 <BR><BR>
@@ -280,7 +280,7 @@ PREPARACION
 9Para finalizar, rectifica la sazón, agrega culantro picado al gusto y sirve una generosa porción. ¡Buen provecho! Cuéntanos en los comentarios tu opinión y comparte con nosotros una fotografía del resultado final.
     <br><br>
      <a href="#OLLUQUITO_CON_CHARQUI"></a>
-     <img src="../WEB-COMIDA/recipes/olluquito con charqui.jpg" alt="No aparece olluquito con charqui width="50%">
+     <img src="/recipes/olluquito con charqui.jpg" alt="No aparece olluquito con charqui width="50%">
      <h2>OLLUQUITO CON CHARQUI</h2>
      <a href="#Principio"></a>
     <BR><BR>
