--- a/WEB-COMIDA/web.html
+++ b/WEB-COMIDA/web.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--title>Ejemplo de página con frames</title-->
+    <title>Ejemplo de página con frames</title>
 </head>
 <frameset rows="100,*" border="0" frameborder="0" y framespacing="0">
     <frame src="cabecera.html" name="cabecera" />
