--- a/Roberto y Raul/PELIS-IMBD.html
+++ b/Roberto y Raul/PELIS-IMBD.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
      <head>
- <style type="text/css">
+        <link rel="stylesheet" href="estilo.css">
+ <!--style type="text/css">
    body {
      /*background-color:59A9FF;*/
      background:linear-gradient(to top right,red,#313173,green);
@@ -10,7 +11,7 @@
 font-family:helvetica;
      color:white;
 }
-</style>
+</style-->
  
 </head>
 <body>
@@ -72,14 +73,14 @@ font-family:helvetica;
         </h4>
     <H2>Mejores Actores</H2>
         <ul>
-            <li><button onclick="location.href = 'file:///C:/Users/Alumno/Desktop/Roberto%20y%20Raul/Untitled-2.html'">Jonny Depp</button>
-                <a href="https://www.imdb.com/es-es/name/nm0000136/?ref_=ls_t_1">JONNY DEPP</a></li>
+            <li><a href="Untitled-2.html" >Jonny Depp</li>
+                <a href="https://www.imdb.com/es-es/name/nm0000136/?ref_=ls_t_1">JONNY DEPP - IMDB</a></li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Johnny_Depp_2020.jpg" width="100px"> <br>
     
-            <li><button onclick="location.href = 'file:///C:/Users/Alumno/Desktop/Roberto%20y%20Raul/Untitled-3.html'">Leonardo Dicaprio</button></li><br>
+            <li><button onclick="location.href = ">Leonardo Dicaprio</button></li><br>
                 <a href="https://www.imdb.com/es-es/name/nm0000138/?ref_=ls_t_2">Leonardo Dicaprio</a></li>
             <img src="https://www.hola.com/horizon/landscape/9f8c5881e0c8-leonardo-dicaprio.jpg?im=Resize=(960),type=downsize" width="100px">
-            <li><button onclick="location.href = 'file:///C:/Users/Alumno/Desktop/Roberto%20y%20Raul/Untitled-4.html'">Will Smith</button></li><br>
+            <li><button onclick="location.href = '//C:\Users\Alumno\Desktop\SW\grupo0\Roberto y Raul\Untitled-4.html" >Will Smith</button></li><br>
             <a href="https://www.imdb.com/es-es/name/nm0000226/?ref_=ls_t_4">Will Smith</a></li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg/800px-TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg" width="100px">
 
