--- a/Roberto y Raul/PELIS-IMBD.html
+++ b/Roberto y Raul/PELIS-IMBD.html
@@ -77,10 +77,10 @@ font-family:helvetica;
                 <a href="https://www.imdb.com/es-es/name/nm0000136/?ref_=ls_t_1">JONNY DEPP - IMDB</a></li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Johnny_Depp_2020.jpg" width="100px"> <br>
     
-            <li><button onclick="location.href = ">Leonardo Dicaprio</button></li><br>
+            <li><button onclick="location.href = 'Untitled-4.html' " >Leonardo Dicaprio</button></li><br>
                 <a href="https://www.imdb.com/es-es/name/nm0000138/?ref_=ls_t_2">Leonardo Dicaprio</a></li>
             <img src="https://www.hola.com/horizon/landscape/9f8c5881e0c8-leonardo-dicaprio.jpg?im=Resize=(960),type=downsize" width="100px">
-            <li><button onclick="location.href = '//C:\Users\Alumno\Desktop\SW\grupo0\Roberto y Raul\Untitled-4.html" >Will Smith</button></li><br>
+            <li><button onclick="location.href = 'Untitled-4.html' " >Will Smith</button></li><br>
             <a href="https://www.imdb.com/es-es/name/nm0000226/?ref_=ls_t_4">Will Smith</a></li>
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg/800px-TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg" width="100px">
 
