--- a/Roberto y Raul/PELIS-IMBD.html
+++ b/Roberto y Raul/PELIS-IMBD.html
@@ -74,15 +74,16 @@ font-family:helvetica;
     <H2>Mejores Actores</H2>
         <ul>
             <li><a href= Untitled-2.html>Jonny Depp</li>
-                <a href="https://www.imdb.com/es-es/name/nm0000136/?ref_=ls_t_1">JONNY DEPP - IMDB</a></li>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Johnny_Depp_2020.jpg" width="100px"> <br>
+                <a href="https://www.imdb.com/es-es/name/nm0000136/?ref_=ls_t_1" target="_blank">JONNY DEPP - IMDB</a></li>
+            <img src="jonny deep.jpg" alt="Fotografia de J. Depp" width="100px"> <br>
     
-            <li><button onclick="location.href = ">Leonardo Dicaprio</button></li><br>
-                <a href="https://www.imdb.com/es-es/name/nm0000138/?ref_=ls_t_2">Leonardo Dicaprio</a></li>
-            <img src="https://www.hola.com/horizon/landscape/9f8c5881e0c8-leonardo-dicaprio.jpg?im=Resize=(960),type=downsize" width="100px">
-            <li><button onclick="location.href = '//C:\Users\Alumno\Desktop\SW\grupo0\Roberto y Raul\Untitled-4.html" >Will Smith</button></li><br>
-            <a href="https://www.imdb.com/es-es/name/nm0000226/?ref_=ls_t_4">Will Smith</a></li>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg/800px-TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg" width="100px">
+            <li><button onclick="location.href = 'Untitled-3.html'">Leonardo Dicaprio</button></li><br>
+                <a href="https://www.imdb.com/es-es/name/nm0000138/?ref_=ls_t_2" target="_blank">Leonardo Dicaprio</a></li>
+            <img src="leonardo.jpg" alt= "Fotografia de Leonardo Dicaprio" title="Leo con camisa hawaiana" width="100px">
+            <li><button onclick="location.href = 'Untitled-4.html' ">Will Smith</button></li><br>
+            <a href="https://www.imdb.com/es-es/name/nm0000226/?ref_=ls_t_4" target="_blank">Will Smith</a></li>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg/800px-TechCrunch_Disrupt_San_Francisco_2019_-_Day_1_%2848834070763%29_%28cropped%29.jpg" 
+                  alt="Fotografia de Will Smith" title="Will Smith con micrófono" width="100px">
 
         </ul>
     </body>
