--- a/Roberto y Raul/Untitled-2.html
+++ b/Roberto y Raul/Untitled-2.html
@@ -8,8 +8,9 @@
 <p>Johnny Depp nació el 9 de junio de 1963 en Kentucky, Estados Unidos. Es un actor y productor, conocido por Sweeney Todd: El barbero diabólico de la calle Fleet (2007), Piratas del Caribe: La maldición de la Perla Negra (2003) y Piratas del Caribe: En el fin del mundo (2007). Ha estado casado con Amber Heard y Lori A. Depp
 </p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Johnny_Depp_2020.jpg" alt="Actor Johnny Depp at the en:Berlinale 2020 "width=300px>
-
-
+</head>
+<br>
+<a href="PELIS-IMBD.html"> <button>VOLVER A LA PAGINA PRINCIPAL</button> </a>
 </head>
 <body>
     
