--- a/Grupo DGT/Prueba.html
+++ b/Grupo DGT/Prueba.html
@@ -17,22 +17,22 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur minima sint quis nulla provident rerum, <br>
          adipisci est necessitatibus sed voluptate recusandae unde? Autem quo perspiciatis cupiditate facere. Nihil, natus omnis?
       </p>
-      <p>
+      <!-- <p class="estilo_Javi">
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur minima sint quis nulla provident rerum, <br>
          adipisci est necessitatibus sed voluptate recusandae unde? Autem quo perspiciatis cupiditate facere. Nihil, natus omnis?
-      </p>
+      </p> -->
       
     <ul>
-        <li>
+        <li class="elemento_horiz">
              <a href="prueba2.html#Keanu Reeves" >  keanu Reeves </a>
         </li>
 
-        <li>
+        <li class="elemento_horiz">
             <a href="prueba2.html#Brad Pitt" >   Brad Pitt</a>
             <!-- <a href="prueba2.html#Jennifer López" >   Brad Pitt</a> -->
         </li>
 
-        <li>
+        <li class="elemento_horiz">
             <a href="prueba2.html#Jennifer López" >   Jennifer López</a>
         </li>
     </ul>
