--- a/Grupo DGT/prueba2.html
+++ b/Grupo DGT/prueba2.html
@@ -16,7 +16,7 @@
 
     <h2 id="Keanu Reeves">Keanu Reeves</h2>
 
-<p><a href="https://es.wikipedia.org/wiki/Keanu_Reeves">Keanu Reeves</a>  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde <br>
+<p><a href="https://es.wikipedia.org/wiki/Keanu_Reeves" target="_blank" >Keanu Reeves</a>  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde <br>
     voluptatum, sequi sint! Nesciunt unde facilis eveniet sequi molestiae quos. Dignissimos commodi sunt ipsam quo aut?</p>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum,<br>
      sequi sint! Nesciunt unde facilis eveniet sequi molestiae quos. Dignissimos commodi sunt ipsam quo aut?</p>
@@ -34,7 +34,7 @@
 
 <h2 id= "Brad Pitt">Brad Pitt</h2>
 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum,<br>
+<p><a href="https://es.wikipedia.org/wiki/Brad_Pitt" target="_blank" >Brad Pitt</a>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum,<br>
     sequi sint! Nesciunt unde facilis eveniet sequi molestiae quos. Dignissimos commodi sunt ipsam quo aut?</p>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum, <br>
    sequi sint! Nesciunt unde facilis eveniet sequi molestiae quos. Dignissimos commodi sunt ipsam quo aut?</p>
@@ -50,7 +50,7 @@
 
 <h2 id= "Jennifer López">Jennifer López </h2>
 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum,<br>
+<p><a href="https://es.wikipedia.org/wiki/Jennifer_Lopez" target="_blank" >Jennifer López</a>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum,<br>
     sequi sint! Nesciunt unde facilis eveniet sequi molestiae quos. Dignissimos commodi sunt ipsam quo aut?</p>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis deserunt cumque dignissimos vel unde voluptatum, <br>
    sequi sint! Nesciunt unde facilis eveniet sequi molestiae quos. Dignissimos commodi sunt ipsam quo aut?</p>
