--- a/Grupo DGT/Prueba.html
+++ b/Grupo DGT/Prueba.html
@@ -60,7 +60,7 @@
 
       <h2>¿Quieres saber más sobre sus películas? </h2>
       <p> haz click en el siguiente boton </p>
-    <a href="https://www.imdb.com/"> <img src="./botonIMDB.png" width="15%" alt="IMDB"></a>
+    <a href="https://www.imdb.com/" target="_blank"> <img src="./botonIMDB.png" width="15%" alt="IMDB"></a>
   
 
 
