--- a/dni.html
+++ b/dni.html
@@ -4,7 +4,7 @@
 <title>Hola Mundo HTML</title>
 
 <meta name="title" content="Hola Mundo HTML">
-<meta name="description" content="Hola Mundo en HTML. Código, descripción del lenguaje HTML, ejemplos y web oficial.">
+<meta name="description" content="Hola Mundo en HTML. Código, descripción de lenguaje HTML, ejemplos y web oficial.">
 <meta name="keywords" content="html,holamundo, hola mundo, ejemplos, manuales, artículos, tutoriales">
 <!--link href="./HolaMundoHTML_files/main.css" rel="stylesheet" type="text/css"-->
 
