--- a/ander1.html
+++ b/ander1.html
@@ -6,6 +6,7 @@
     <title>Ejemplo num. 1 para trabajar con API</title>
 </head>
 <body>
+    <!-- Comentario de prueba -->
     <button id="mostrar">Mostrar Usuario</button>
     <div id="contenido"></div>
     <button id="limpiar">Limpiar Usuario</button>
