--- a/Grupo DGT/Gabriel.html
+++ b/Grupo DGT/Gabriel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo Nº1 de API</title>
+    <title>Ejemplo Nº1 API Gabi</title>
     <link rel="stylesheet" href="Gabriel.css" type="text/css">
 </head>
 <body>
