ejercicios en clase

--- a/Ejercicios en clase_Tamara/Tamara.html
+++ b/Ejercicios en clase_Tamara/Tamara.html
@@ -10,9 +10,11 @@
     <button id="limpiar">Limpiar</button>
     <div id="contenido"></div>
 
+<script src="Tamara.js"></script>
+
 <!--<img src="carro.jpg" alt="ejemplo de foto">-->
 
-    <script>
+<!--    <script>
         document.getElementById("mostrar").addEventListener("click", mostrarDatosAPI, true);
         document.getElementById("limpiar").addEventListener("click", borrarDatosAPI, true);
         let caja = document.querySelector("#contenido");
@@ -58,7 +60,7 @@
             console.log('Ha pulsado borrar usuario');
             caja.innerHTML = '';
         }
-    </script>
+    </script> -->
     
 
 </body>
