--- a/Grupo DGT/Ejemplos Api Gabriel/Farmacia Gabi.html
+++ b/Grupo DGT/Ejemplos Api Gabriel/Farmacia Gabi.html
@@ -12,18 +12,26 @@
     <button id="Limpiar">Atras</button>
     <div id="contenido"></div>
 </center>
-    <script src="FarmaciaGabiAPI.js"></script>
+    
 
 
 
+<br>
+<form> 
+    <label for="texto">Introduzca el Codigo:</label> 
+    <input type="text" id="texto" name="texto"> 
+    <input type="button" value="Mostrar Medicamento" onclick="Mostrar()"> 
+</form> 
 
+<!--<label for="medicina">Escoge un medicamento:</label>
+<select name="medicina" id="medicina">
+  <option value="Depakine">Depakine</option>
+  <option value="Aspirina">Aspirina</option>
+  
+</select>
+-->
 
-
-
-
-
-
-
+<script src="FarmaciaGabiAPI.js"></script>
 
     <h1>Farmacia</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor sapiente nihil sequi perspiciatis. Voluptates dolorum omnis exercitationem veniam dolores ex reiciendis obcaecati, eos quos beatae iure dolore mollitia ut aspernatur?</p>
