Pagina en su mejor version

--- a/Grupo DGT/Ejemplos Api Gabriel/Farmacia Gabi.html
+++ b/Grupo DGT/Ejemplos Api Gabriel/Farmacia Gabi.html
@@ -17,12 +17,12 @@
 
 
 <br>
-<form> 
+<!--<form> 
     <label for="texto">Introduzca el Codigo:</label> 
     <input type="text" id="texto" name="texto"> 
     <input type="button" value="Mostrar Medicamento" onclick="Mostrar()"> 
 </form> 
-
+-->
 <!--<label for="medicina">Escoge un medicamento:</label>
 <select name="medicina" id="medicina">
   <option value="Depakine">Depakine</option>
@@ -30,6 +30,10 @@
   
 </select>
 -->
+<input type="text" id="medicamentoNumero" placeholder="Número del medicamento">
+<button id="botonMostrar">Mostrar medicamento</button>
+<div id="contenido"></div>
+
 
 <script src="FarmaciaGabiAPI.js"></script>
 
