--- a/Roberto y Raul/ASPIRINAa.HTML
+++ b/Roberto y Raul/ASPIRINAa.HTML
@@ -10,11 +10,16 @@
     </head>
 <body>
     <h1>Buscador de Medicamento CIMA</h1>
-    <input type="text" id="txtNumeroRegistro" placeholder="Ingrese el número de registro">
-    <button id="btnBuscarMedicamento">Buscar Medicamento</button>
-    <button id="borrar">borrar contenido</button> <br>
+    <form>
+        <br><label for="fname">Por favor, introduzca el código del medicamento :</label><br>
+        <br><input type="text" id="numreg" name=""><br>        
+    </form>
+        
+    <br><button id="mostrar">Mostrar Medicamento</button><br>
+    <br><button id="limpiar">Borrar Medicamento</button><br>
 
     <div id="contenido"></div>
+
     <script src="ASPIRINAa.JS"></script>
 
 </body>
