--- a/RobertoyRaul/MEDICAMENTO API/ASPIRINAa.HTML
+++ b/RobertoyRaul/MEDICAMENTO API/ASPIRINAa.HTML
@@ -3,22 +3,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link rel="stylesheet" href="ASPIRINAA.CSS">
 
     <meta charset="UTF-8">
     <title>Buscador de Medicamento CIMA</title>
+    <link rel="stylesheet" href="ASPIRINAA.CSS">
+
     </head>
 <body>
     <h1>Buscador de Medicamento CIMA</h1>
-    <form>
-        <br><label for="fname">Por favor, introduzca el código del medicamento :</label><br>
-        <br><input type="text" id="numreg" name=""><br>        
-    </form>
-        
-    <br><button id="mostrar">Mostrar Medicamento</button><br>
-    <br><button id="limpiar">Borrar Medicamento</button><br>
+            
+    <br><button id="buscarBtn">Mostrar Medicamento</button><br>
+    <br><button id="borrarBtn">Borrar Medicamento</button><br>
 
-    <div id="contenido"></div>
+    <div id="medicamentoInfo"></div>
 
     <script src="ASPIRINAa.JS"></script>
 
