Creacion de Tabla

--- a/Grupo DGT/Ejemplos Api Gabriel/Gabriel.html
+++ b/Grupo DGT/Ejemplos Api Gabriel/Gabriel.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!--Alo, presidentes, es una prueba para usar api por primera vez-->
-    <center>
+    <justified>
     <button id="mostrar">Mostrar usuario</button>
     <button id="Imagen">Ver Imagen</button>
     <button id="Video">Ver video</button>
@@ -19,9 +19,10 @@
     <button id="Limpiar">Limpiar Usuario</button>
     <button id="LimpiarTodo">Limpiar Imagen</button>
     <button id="LimpiarVideo">Limpiar Video</button>
-    </center>
+    </justified>
     
     <!--<script>
+        //PARA MOSTRAR DATOS DEL USUARIO/USUARIOS
         document.getElementById("mostrar").addEventListener("click", mostrarDatosAPI, true);
 
         let contenido = document.querySelector("#contenido");
@@ -125,6 +126,7 @@
         {
             videos.innerHTML = '';
         }
+            //SE PUEDEN HACER VARIOS SCRIPTS O UN UNICO SCRIPT
     </script>-->
    <!--  <button id="limpiar">Limpiar Usuario</button>
     <div id= "nada"></div>
@@ -146,7 +148,7 @@
 
 
     </script>-->
-    <script src="GabrielAPI.js"></script>
+    <script src="GabrielAPI.js"></script> <!--PARA LINKEAR UN ARCHIVO DE JAVA.SCRIPT CON EL SCRIPT AL HTML-->
 
 <H1>AKFNENF</H1>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci illum vel, magni enim, odit odio eligendi suscipit magnam quod minima iure fugit, incidunt nisi! Nostrum voluptate autem qui excepturi recusandae?</p>
