--- a/Farmacia_ems_iqa.html
+++ b/Farmacia_ems_iqa.html
@@ -14,7 +14,7 @@
      <input type="nregistro" >
     <!-- Comentario de prueba -->
     <button id="mostrar">Mostrar medicamento</button> <br>
-    <button id="limpiar">Borrar Usuario</button>
+    <button id="limpiar">Borrar medicamento</button>
     <div id="contenido"></div>
 <script src="tools.js">
 </script>
