Subir lo de las tablas

--- a/5_users.html
+++ b/5_users.html
@@ -14,7 +14,12 @@
     <!-- Comentario de prueba -->
     <button id="mostrar">Mostrar Usuario</button> <br>
     <button id="limpiar">Borrar Usuario</button>
+    <button id="rellenar">Rellenar tabla</button>
     <div id="contenido"></div>
+    <table border="1">
+        <thead id="cabecera"></thead>
+        <tbody id="cuerpo"></tbody>
+    </table>
 <script src="5_users.js">
 </script>
 </body>
