--- a/ESTEBAN_MORENO/TABLAS/RELEASE_V4/ems_5_users.html
+++ b/ESTEBAN_MORENO/TABLAS/RELEASE_V4/ems_5_users.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <!-- Comentario de prueba -->
+    <input type="number" id="miNumero" placeholder="Ingrese un número">
+    <button onclick="enviarNumero()">Mostrar usuarios</button>
     <button id="mostrar">Mostrar Usuario</button> <br>
     <button id="limpiar">Borrar Usuario</button>
     <button id="rellenar">Rellenar tabla</button>
@@ -24,3 +26,31 @@
 </script>
 </body>
 </html>
+
+    <!-- 
+        function enviarNumero() {
+            // Obtenemos el valor del input
+            let numero = document.getElementById("miNumero").value;
+
+            // Enviamos el valor a otra función o lo procesamos aquí
+            // Por ejemplo, mostrar el valor en una alerta:
+            alert("El número ingresado es: " + numero);
+
+            // O enviar el valor a otro archivo usando AJAX (para casos más complejos)
+            // ...
+        }
+
+        function enviarNumero() {
+            let numero = document.getElementById("miNumero").value;
+            fetch('tu_ruta_al_archivo.php', {
+                method: 'POST',
+                body: JSON.stringify({ numero: numero })
+            })
+            .then(response => response.text())
+            .then(data => console.log(data))
+            .catch(error => console.error('Error:', error));
+        }
+    -->
+    
+
+ 
