--- a/ESTEBAN_MORENO/TABLAS/RELEASE_V4/ems_5_users.html
+++ b/ESTEBAN_MORENO/TABLAS/RELEASE_V4/ems_5_users.html
@@ -3,20 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo num. 2 para trabajar con API</title>
-    <style>
+    <title>Ejemplo num. 3 para trabajar con API</title>
+    <link rel="stylesheet" href="styles.css">
+    
+    <!--<style>
         div {color:white;
         font-size: 28px;
-    background: linear-gradient(black,blue);}
-    </style>
+        background: linear-gradient(black,blue);
+        }
+        .button-container {
+            text-align: center;
+        }
+        .button-container {
+            text-align: center;
+            margin-top: 50px;
+        }
+        .button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style> -->
+
 </head>
 <body>
-    <!-- Comentario de prueba -->
-    <input type="number" id="miNumero" placeholder="Ingrese un número">
-    <button onclick="enviarNumero()">Mostrar usuarios</button>
-    <button id="mostrar">Mostrar Usuario</button> <br>
-    <button id="limpiar">Borrar Usuario</button>
-    <button id="rellenar">Rellenar tabla</button>
+    <!-- *** -->
+    <div class="button container">
+        <input type="number" id="MostrarRegistros" placeholder="Número reg. devolver">
+        <button onclick="mostrarDatosAPI_v3()">Buscar</button>
+        <!--<button id="mostrar">Mostrar Usuario</button> <br> -->
+        <button id="limpiar">Borrar Usuario</button>
+        <button id="rellenar">Rellenar tabla</button>
+    </div>
     <div id="contenido"></div>
     <table border="1">
         <thead id="cabecera"></thead>
