--- a/RobertoyRaul/rob2.html
+++ b/RobertoyRaul/rob2.html
@@ -10,8 +10,12 @@
     <!-- Comentario de prueba -->
     <button id="mostrar">Mostrar Usuario</button> <br>
     <button id="limpiar">Borrar Usuario</button>
-    <div id="contenido"></div>
-<script src="rob.js">
-</script>
+    <div id="contenido">
+        <table>
+            <thead id="cabecera"></thead>
+            <tbody id="cuerpo"></tbody>
+        </table>
+    </div>
+    <script src="rob.js"></script>
 </body>
 </html>
