--- a/Plantillas_Templates/HTML5_base.html
+++ b/Plantillas_Templates/HTML5_base.html
@@ -13,6 +13,6 @@ HTML
     <h1>¡Bienvenido a mi sitio dinámico!</h1>
     <p>Este contenido se verá afectado por el JavaScript.</p>
     <button onclick="mostrarMensaje()">Haz clic aquí</button>
-    <script src="JS_base.js"></script>
+    <script src=".\JS_base.js"></script>
 </body>
 </html>
