Resuelto problema con lista de actrices

--- a/20250118/cliente.html
+++ b/20250118/cliente.html
@@ -17,9 +17,9 @@
     <p> Esta página recopila aspectos esenciales vistos en
         el curso, durante 7 semanas (del 4 de diciembre
         al 17 de Enero).</p>
-    <p style="color:red"> La parte de MySQL no está recogida aquí, sólo se
+    <!--p style="color:red"> La parte de MySQL no está recogida aquí, sólo se
         comenzó un poco y ha quedado pendiente terminarlo.
-    </p>
+    </p-->
     <ol>
         <li><a href="#ExtAPI">
             Ejemplos de fetch hacia una API externa
